# carbono

./: .gitignore  README.md  pyproject.toml
carbono/: config.py  image.py  utils.py
carbono/constants/: carbon.py  export_size.py  languages.py  misc.py  params.py
tests/: __init__.py  test_url.py
