[tool.poetry]
name = "carbono"
version = "0.0.1"
description = "A Python package to generate snippet images via Carbon programmatically."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
importlib-metadata = {version = "^3.0", python = "<3.8"}
pyppeteer = ">=0.2.2,<1"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.812"
bandit = "^1.7.0"
pytest = "^6.2.4"
pytest-clarity = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
